--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "responsive-ant-menu": "^2.0.4",
     "socket.io-client": "^4.5.1",
     "store": "^2.0.12",
     "typescript": "^4.6.4",
