--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"express-winston": "^4.2.0",
 		"handlebars": "^4.7.7",
 		"helmet": "^5.0.2",
+		"https": "^1.0.0",
 		"ics": "^2.35.0",
 		"ioredis": "^5.0.4",
 		"jsonwebtoken": "^8.5.1",
